<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_height="0dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_height="0dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            >

            <EditText
                android:id="@+id/editTextName"
                android:padding="8dp"
                android:background="@drawable/round_border_up"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/name_hint"/>
            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:background="@drawable/unround_border"
                android:hint="@string/email_hint"/>
            <EditText
                android:id="@+id/editTextPassword"
                android:inputType="textPassword"
                android:padding="8dp"
                android:background="@drawable/unround_border"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"

                android:hint="@string/password_hint"/>

            <EditText
                android:id="@+id/editTextConfirmPassword"
                android:inputType="textPassword"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/round_corner_bottom"
                android:hint="@string/con_pass_hint"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="24dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:background="@drawable/round_button"

            android:textColor="#fff"
            android:text="@string/signup"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:text="@string/have_acc_hint"/>
            <TextView
                android:id="@+id/textViewLogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/login_btn"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>